# device-infra

./: .bazelrc  BUILD  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  go.work  maven_install.json
builddeps/: BUILD.bazel.googleapis  rbe_go_deps.bzl
patches/: BUILD  README.md  bazelbuild_remote_apis_sdks.patch  googleapis.modules.patch  rules_android_dalvik_mirror.patch
src/devtools/atsconsole/controller/proto/: BUILD  device_descriptor.proto  session_plugin.proto
src/devtools/atsconsole/result/proto/: BUILD  report.proto  result.proto
src/devtools/atsconsole/tradefed/proto/: BUILD  invocation_context.proto  metric_measurement.proto  test_record.proto
src/devtools/common/metrics/stability/util/: BUILD  grpc_error_util.py  grpc_error_util_test.py
src/devtools/deviceaction/: README.md
src/devtools/deviceaction/deviceconfigs/: BUILD
src/devtools/deviceaction/deviceconfigs/configs/: google_pixel-7_t_user.textproto  oppo_cph2359_t_userdebug.textproto  redmi_2312dra50g_t_user.textproto  sharp_aquos_sense6_t_userdebug_build_with_sim_card.textproto
src/devtools/deviceaction/schemas/proto/: BUILD  base_spec.proto
src/devtools/deviceaction/schemas/proto/actions/: BUILD  install_mainline_spec.proto  reset_spec.proto
src/devtools/deviceinfra/: README.md
src/devtools/deviceinfra/api/deviceinfo/proto/: BUILD  device_config.proto  device_descriptor.proto  device_dimension.proto  device_identifier.proto  device_info.proto  device_locator.proto  device_requirement.proto  device_type.proto
src/devtools/deviceinfra/host/daemon/proto/: BUILD  health.proto
src/devtools/deviceinfra/shared/commandhistory/proto/: BUILD  command_record.proto
src/devtools/deviceinfra/shared/subprocess/proto/: BUILD  agent_config.proto
src/devtools/deviceinfra/ui/hello_device_infra/: hello_device_infra.ng.html  hello_device_infra.ts  hello_device_infra_module.ts
src/devtools/mobileharness/api/deviceconfig/proto/: BUILD  basic.proto  conditioned_device_config.proto  device.proto  device_config_service.proto  lab.proto  lab_device.proto  lab_project.proto  project.proto
src/devtools/mobileharness/api/devicemanager/proto/: BUILD  persistent_device_info.proto
src/devtools/mobileharness/api/gateway/proto/: BUILD  setting.proto
src/devtools/mobileharness/api/messaging/: BUILD  messaging.proto  messaging_service.proto
src/devtools/mobileharness/api/model/proto/: BUILD  device.proto  error.proto  job.proto  lab.proto  test.proto  universe.proto
src/devtools/mobileharness/api/query/proto/: BUILD  device_query.proto  filter.proto  lab_query.proto  lab_record.proto
src/devtools/mobileharness/fe/v6/: BUILD
src/devtools/mobileharness/fe/v6/angular/: .gitignore  BUILD  README.md  adapter.bzl  angular-metadata.tsconfig.json  angular.json  google3.tsconfig.json  index.html  karma.conf.js  main.ts  package.json  styles.css  test_setup.ts  tsconfig.app.json  tsconfig.json
src/devtools/mobileharness/infra/client/proto/: BUILD  artifact_upload_mode.proto  device.proto
src/devtools/mobileharness/infra/container/proto/: BUILD  mode_setting.proto  sandbox_setting.proto  test_engine.proto
src/devtools/mobileharness/infra/lab/proto/: BUILD  device_status.proto  file.proto  prepare_test_service.proto
src/devtools/mobileharness/infra/monitoring/proto/: BUILD  monitor_entry.proto  monitored_record.proto  record.proto
src/devtools/mobileharness/platform/android/runtimestats/: BUILD  runtime_stats_report.proto
src/devtools/mobileharness/service/labconsole/: README.md
src/devtools/mobileharness/service/moss/proto/: BUILD  result.proto  slg.proto
src/devtools/mobileharness/shared/commandhistory/proto/: BUILD  command_record.proto
src/devtools/mobileharness/shared/labinfo/proto/: BUILD  lab_info_service.proto
src/devtools/mobileharness/shared/subprocess/proto/: BUILD  agent_config.proto
src/devtools/mobileharness/shared/trace/proto/: BUILD  span.proto
src/devtools/mobileharness/shared/version/proto/: BUILD  version.proto  version_service.proto
src/devtools/omnilab/deviceadmin/proto/: BUILD  network_logs.proto
src/devtools/rbe/: BUILD  README.md  cas.bara.sky  go.mod  go.sum
src/devtools/rbe/casconverter/: BUILD  main.go
src/devtools/rbe/casdownloader/: BUILD  adc_credentials.sh  main.go  version.bzl
src/devtools/rbe/casdownloader/cache/: BUILD  cache.go  localcache.go
src/devtools/rbe/casdownloader/download/: BUILD  download.go  download_test.go
src/devtools/rbe/casuploader/: BUILD  README.md  go.mod  go.sum  main.go
src/devtools/rbe/casuploader/chunker/: BUILD  chunker.go  chunker_test.go
src/devtools/rbe/casuploader/chunkerutil/: BUILD  chunkerutil.go  chunkerutil_test.go
src/devtools/rbe/casuploader/metrics/: BUILD  metrics.go
src/devtools/rbe/casuploader/uploader/: BUILD  dir.go  file.go  filelist.go  uploader.go  zip.go  zip_test.go
src/devtools/rbe/casviewer/: BUILD  main.go  main_test.go
src/devtools/rbe/casviewer/chunkstore/: BUILD  index.go  index_test.go  storage.go  storage_test.go  test_helpers_test.go
src/devtools/rbe/casviewer/fuse/: BUILD  filesystem.go
src/devtools/rbe/casviewer/mountpoint/: BUILD  mountpoint.go  mountpoint_test.go
src/devtools/rbe/casviewer/mountutil/: BUILD  mountutil.go  mountutil_test.go
src/devtools/rbe/common/: BUILD  multistringflag.go
src/devtools/rbe/common/monitoring/: BUILD  monitoring.go  monitoring_external.go  monitoring_test.go
src/devtools/rbe/rbeclient/: BUILD  auth_google3.go  rbeclient.go
src/devtools/recoverbot/firmware/: README.md  build.sh  platformio.ini  sketch.yaml
src/devtools/recoverbot/firmware/src/: app_state.h  calibration_store.cpp  calibration_store.h  commands.cpp  commands.h  logo.h  main.cpp  servo_controller.cpp  servo_controller.h  ui.cpp  ui.h
src/devtools/recoverbot/firmware/test/test_core/: test_recoverbot_core.cpp
src/java/com/google/devtools/atsconsole/: Annotations.java  AtsConsole.java  AtsConsoleModule.java  BUILD  ConsoleCommandModule.java  ConsoleInfo.java  (+3 more)
src/testing/mobileharness/shared/proto/: BUILD  device_query.proto  lab_query.proto
(+4707 files in other folders)
