module(
    name = "deviceinfra",
    repo_name = "com_google_deviceinfra",
)

################
# Bazel module #
################

bazel_dep(name = "abseil-cpp", version = "20250512.1")
bazel_dep(name = "abseil-py", version = "2.1.0")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "grpc", version = "1.74.1")
bazel_dep(name = "grpc-java", version = "1.71.0")
bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "rules_android", version = "0.6.6")
bazel_dep(name = "rules_java", version = "8.14.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "rules_kotlin", version = "2.1.0")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_python", version = "1.6.0")
bazel_dep(name = "rules_swift", version = "2.1.1")
bazel_dep(name = "cel-spec", version = "0.24.0", repo_name = "dev_cel")

##############
# googleapis #
##############
bazel_dep(name = "googleapis", version = "0.0.0")
archive_override(
    module_name = "googleapis",
    integrity = "sha256-nqH6sI2rZfsPg8mmAw2vfv2eyiVJCWGyrnyqx2acWk4=",
    patch_strip = 1,
    patches = ["//patches:googleapis.patch"],
    strip_prefix = "googleapis-f4eff5440fd07389f820d22d2a55690c6390dc6d",
    urls = [
        "https://github.com/googleapis/googleapis/archive/f4eff5440fd07389f820d22d2a55690c6390dc6d.tar.gz",
    ],
)

archive_override(
    module_name = "rules_android",
    integrity = "sha256-+Pi8pt9h6mBwoKirxAVJQLGcn9tPq7hk5A0p0ST1F/k=",
    patch_strip = 1,
    patches = ["//patches:rules_android_dalvik_mirror.patch"],
    strip_prefix = "rules_android-0.6.6",
    urls = [
        "https://github.com/bazelbuild/rules_android/releases/download/v0.6.6/rules_android-v0.6.6.tar.gz",
    ],
)

switched_rules = use_extension("@googleapis//:extensions.bzl", "switched_rules")
switched_rules.use_languages(
    cc = True,
    go = True,
    grpc = True,
    java = True,
    python = True,
)
use_repo(switched_rules, "com_google_googleapis_imports")

######
# Go #
######
bazel_dep(name = "rules_go", version = "0.57.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.0")

bazel_dep(name = "gazelle", version = "0.45.0", repo_name = "bazel_gazelle")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(
    go_work = "//:go.work",
)
go_deps.module(
    path = "github.com/cncf/xds/go",
    sum = "h1:aQ3y1lwWyqYPiWZThqv1aFbZMiM9vblcSArJRf2Irls=",
    version = "v0.0.0-20250501225837-2ac532fd4443",
)
go_deps.module(
    path = "cel.dev/expr",
    sum = "h1:56OvJKSH3hDGL0ml5uSxZmz3/3Pq4tJ+fb1unVLAFcY=",
    version = "v0.24.0",
)
go_deps.module(
    path = "github.com/envoyproxy/go-control-plane/envoy",
    sum = "h1:yg/JjO5E7ubRyKX3m07GF3reDNEnfOboJ0QySbH736g=",
    version = "v1.36.0",
)
go_deps.module(
    path = "github.com/envoyproxy/go-control-plane",
    sum = "h1:hbG2kr4RuFj222B6+7T83thSPqLjwBIfQawTkC++2HA=",
    version = "v0.14.0",
)
go_deps.module(
    path = "github.com/envoyproxy/go-control-plane/ratelimit",
    sum = "h1:/G9QYbddjL25KvtKTv3an9lx6VBE2cnb8wp1vEGNYGI=",
    version = "v0.1.0",
)
go_deps.module_override(
    patch_strip = 1,
    patches = [
        "//patches:bazelbuild_remote_apis_sdks.patch",
    ],
    path = "github.com/bazelbuild/remote-apis-sdks",
)

# NB 2024-11-18: Solve issues with BUILD file paths in xds.
# https://github.com/cncf/xds/issues/104
go_deps.gazelle_override(
    build_file_generation = "on",
    directives = [
        "gazelle:resolve go cel.dev/expr @dev_cel_expr//:expr",
    ],
    path = "github.com/cncf/xds/go",
)
go_deps.gazelle_override(
    build_file_generation = "off",
    path = "cel.dev/expr",
)
go_deps.gazelle_override(
    directives = [
        "gazelle:resolve go google.golang.org/protobuf/types/known/anypb @org_golang_google_protobuf//types/known/anypb",
        "gazelle:resolve go google.golang.org/protobuf/types/known/durationpb @org_golang_google_protobuf//types/known/durationpb",
        "gazelle:resolve go github.com/cncf/xds/go/xds/type/matcher/v3 @com_github_cncf_xds_go//xds/type/matcher/v3:go_default_library",
        "gazelle:resolve go github.com/cncf/xds/go/xds/core/v3 @com_github_cncf_xds_go//xds/core/v3:go_default_library",
        "gazelle:resolve go github.com/cncf/xds/go/xds/data/orca/v3 @com_github_cncf_xds_go//xds/data/orca/v3:go_default_library",
        "gazelle:resolve go github.com/cncf/xds/go/xds/type/v3 @com_github_cncf_xds_go//xds/type/v3:go_default_library",
        "gazelle:resolve go github.com/cncf/xds/go/udpa/annotations @com_github_cncf_xds_go//udpa/annotations:go_default_library",
        "gazelle:resolve go github.com/cncf/xds/go/xds/service/orca/v3 @com_github_cncf_xds_go//xds/service/orca/v3:go_default_library",
        "gazelle:resolve go github.com/cncf/xds/go/udpa/type/v1 @com_github_cncf_xds_go//udpa/type/v1:go_default_library",
        "gazelle:resolve go github.com/cncf/xds/go/xds/annotations/v3 @com_github_cncf_xds_go//xds/annotations/v3:go_default_library",
    ],
    path = "google.golang.org/grpc",
)
go_deps.gazelle_override(
    directives = [
        "gazelle:resolve go github.com/cncf/xds/go/xds/type/matcher/v3 @com_github_cncf_xds_go//xds/type/matcher/v3:go_default_library",
        "gazelle:resolve go github.com/cncf/xds/go/xds/core/v3 @com_github_cncf_xds_go//xds/core/v3:go_default_library",
        "gazelle:resolve go github.com/cncf/xds/go/xds/data/orca/v3 @com_github_cncf_xds_go//xds/data/orca/v3:go_default_library",
        "gazelle:resolve go github.com/cncf/xds/go/xds/type/v3 @com_github_cncf_xds_go//xds/type/v3:go_default_library",
        "gazelle:resolve go github.com/cncf/xds/go/udpa/annotations @com_github_cncf_xds_go//udpa/annotations:go_default_library",
        "gazelle:resolve go github.com/cncf/xds/go/xds/service/orca/v3 @com_github_cncf_xds_go//xds/service/orca/v3:go_default_library",
        "gazelle:resolve go github.com/cncf/xds/go/udpa/type/v1 @com_github_cncf_xds_go//udpa/type/v1:go_default_library",
        "gazelle:resolve go github.com/cncf/xds/go/xds/annotations/v3 @com_github_cncf_xds_go//xds/annotations/v3:go_default_library",
    ],
    path = "github.com/envoyproxy/go-control-plane",
)
use_repo(
    go_deps,
    "com_github_bazelbuild_remote_apis",
    "com_github_bazelbuild_remote_apis_sdks",
    "com_github_cncf_xds_go",
    "com_github_envoyproxy_go_control_plane",
    "com_github_envoyproxy_go_control_plane_envoy",
    "com_github_envoyproxy_go_control_plane_ratelimit",
    "com_github_golang_glog",
    "com_github_google_uuid",
    "com_github_hanwen_go_fuse_v2",
    "com_github_jotfs_fastcdc_go",
    "com_github_pkg_xattr",
    "com_github_rsocket_rsocket_go",
    "dev_cel_expr",
    "org_chromium_go_luci",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_oauth2",
    "org_golang_x_sync",
)

inject_repo(
    go_deps,
    "rules_go",
    "bazel_gazelle",
    "googleapis",
    "grpc",
    "protobuf",
)

#######
# OCI #
#######
bazel_dep(name = "rules_oci", version = "2.3.0")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_static",
    digest = "sha256:47b2d72ff90843eb8a768b5c2f89b40741843b639d065b9b937b07cd59b479c6",
    image = "gcr.io/distroless/static-debian13",
    platforms = ["linux/amd64"],
)
use_repo(oci, "distroless_static", "distroless_static_linux_amd64")

#########
# Maven #
#########
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

# Test only artifacts
[
    maven.artifact(
        testonly = True,
        artifact = artifact,
        group = group,
        version = version,
    )
    for group, artifact, version in [coord.split(":") for coord in [
        "androidx.test:core:1.4.0",
        "androidx.test.ext:junit:1.1.3",
        "androidx.test:runner:1.4.0",
        "com.google.guava:guava-testlib:33.0.0-jre",
        "com.google.inject.extensions:guice-testlib:5.1.0",
        "com.google.testparameterinjector:test-parameter-injector:1.16",
        "com.google.truth:truth:1.4.5",
        "com.google.truth.extensions:truth-java8-extension:1.4.5",
        "com.google.truth.extensions:truth-liteproto-extension:1.4.5",
        "com.google.truth.extensions:truth-proto-extension:1.4.5",
        "com.squareup.okhttp3:mockwebserver:4.12.0",
        "junit:junit:4.13.2",
        "org.mockito:mockito-core:4.11.0",
    ]]
]

maven.install(
    artifacts = [
        "androidx.annotation:annotation:1.2.0",
        "androidx.core:core:1.6.0",
        "com.beust:jcommander:1.82",
        "com.github.ben-manes.caffeine:caffeine:3.1.8",
        "com.github.purejavacomm:purejavacomm:1.0.2.RELEASE",
        "com.google.api-client:google-api-client:1.35.2",
        "com.google.api.grpc:grpc-google-cloud-logging-v2:0.112.0",
        "com.google.api.grpc:grpc-google-cloud-pubsub-v1:1.123.5",
        "com.google.api.grpc:proto-google-cloud-logging-v2:0.112.0",
        "com.google.api.grpc:proto-google-cloud-pubsub-v1:1.123.5",
        "com.google.apis:google-api-services-storage:v1-rev20211201-1.32.1",
        "com.google.auth:google-auth-library-credentials:1.23.0",
        "com.google.auth:google-auth-library-oauth2-http:1.23.0",
        "com.google.auto.value:auto-value-annotations:1.10.4",
        "com.google.auto.value:auto-value:1.10.4",
        "com.google.code.findbugs:jsr305:3.0.2",
        "com.google.code.gson:gson:2.10.1",
        "com.google.errorprone:error_prone_annotations:2.39.0",
        "com.google.flogger:flogger-system-backend:0.8",
        "com.google.flogger:flogger:0.8",
        "com.google.guava:guava:33.4.8-jre",
        "com.google.http-client:google-http-client-gson:1.43.0",
        "com.google.http-client:google-http-client:1.43.0",
        "com.google.inject.extensions:guice-assistedinject:5.1.0",
        "com.google.inject.extensions:guice-throwingproviders:5.1.0",
        "com.google.inject:guice:5.1.0",
        "com.kohlschutter.junixsocket:junixsocket-common:2.6.2",
        "com.kohlschutter.junixsocket:junixsocket-mysql:2.6.2",
        "com.kohlschutter.junixsocket:junixsocket-native-common:2.6.2",
        "com.mchange:c3p0:0.10.1",
        "com.mysql:mysql-connector-j:9.0.0",
        "commons-io:commons-io:2.15.1",
        "info.picocli:picocli:4.7.5",
        "javax.inject:jsr330-api:0.9",
        "net.bytebuddy:byte-buddy:1.14.11",
        "net.sf.kxml:kxml2:2.3.0",
        "org.apache.commons:commons-compress:1.25.0",
        "org.apache.commons:commons-lang3:3.14.0",
        "org.apache.commons:commons-text:1.10.0",
        "org.jetbrains.kotlinx:atomicfu-jvm:0.27.0",
        "org.jetbrains.kotlinx:atomicfu:0.27.0",
        "org.jline:jline:3.25.1",
        "org.json:json:20231013",
        "org.pantsbuild:jarjar:1.7.2",
        "org.reflections:reflections:0.9.10",
        "org.robolectric:android-all:14-robolectric-10818077",
        "org.yaml:snakeyaml:2.2",
        "xmlpull:xmlpull:1.1.3.1",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
        "https://repository.mulesoft.org/nexus/content/repositories/public",
    ],
)

# Make the @maven repository available
use_repo(maven, "maven")
